<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">سامانه ارتباط با انجمن مدرسه ها</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nid_no">No. Identity Card</string>
    <string name="name_Of_child">Name Of Child</string>
    <string name="degree_of_education">Degree Of Education</string>
    <string name="phone_number">Phone Number</string>
    <string name="st_no_child">Student No Of Child</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Singnup</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="text">Text</string>
    <string name="search">Search</string>
    <string name="chatlist">ChatList</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="testdate">1397/08/08</string>
    <string name="testtime">22:22</string>
    <string name="send_to">Send To</string>
    <string name="turn_on_wifi">Turn On WiFi</string>
    <string name="turn_on_mobile_data">Turn On Mobile Data</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading...</string>
    <string name="no_internet_access">No Internet Access</string>
    <string name="you_are_offline">You Are Offline</string>
    <string name="warning_lastname_length">lastname should be at least 3 characters</string>
    <string name="warning_fistname_length">fistname should be at least 3 characters</string>
    <string name="warning_phone_no_length">phone number Call number must be 10</string>
    <string name="visibility">Visibility</string>
    <string name="category">Category</string>
    <string name="chat">Chat</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="request_text">Request text</string>
    <string name="refresh">Refresh</string>
    <string name="error">An error occurred. Please try again</string>
    <string name="username_duplicated">Username is duplicate.</string>
    <string name="to">To</string>
    <string name="topic">Topic</string>
    <string name="success">Success</string>
    <string name="error_login">Username or Password is Wrong!</string>
    <string name="warning_field_empty">This Field Is Empty</string>
    <string name="not_found">Not Found</string>
    <string name="submit">Submit</string>
    <string name="manager">Manger</string>
    <string name="community">Community</string>
    <string name="parent">Parent</string>
    <string name="verify">Verify</string>
    <string name="refuse">Refuse</string>
    <string name="city">City</string>
    <string name="zone">Zone</string>
    <string name="school_name">School Name</string>
    <string name="not_verified_by_manager">Your information has not yet been verified by the school principalYour information has not yet been verified by the school manager!!</string>
    <string name="ok">OK</string>
    <string name="unverified_information">Unverified Information</string>
    <string name="not_verified">Not Verified</string>
    <string name="unverified_information_by_manager">Unverified Information By School MAnager</string>
    <string name="verified_parent">Verified Parent</string>
    <string name="add_community">Add Community</string>
    <string name="wrong_verification_code">Wrong Vrification code</string>
    <string name="course">Course</string>
    <string name="post">post</string>
    <string name="verified_parent_alert">Are You Sure You Want To Verified This Parent?</string>
    <string name="unverified_parent_alert">Are You Sure You Want To Unverified This Parent?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="unverified_parent">Unverified Parent</string>
    <string name="verification_code">Verification Code</string>
    <string name="state">State</string>
    <string name="grade">Grade</string>
    <string name="empty_city">There Is No School In This State</string>
    <string name="empty_school">There Is No School In This Zone</string>
    <string name="empty_not_verified_parent">There Is No Parent To Verify</string>
    <string name="address_work">Office Address</string>
    <string name="tel_work">Office Telephone</string>
    <string name="public_word">public</string>
    <string name="private_word">private</string>
    <string name="new_conv">New Conversation</string>
    <string name="edit_community">Edit Community</string>
    <string name="empty_community_list">Empty Community List</string>
    <string name="contact">Contact</string>
    <string name="hashtag">#</string>
    <string name="community_list">Community List</string>
    <string name="warning_child_name_length">name of child should be at least 3 characters</string>
    <string name="warning_username_length">username should be at least 3 characters</string>
    <string name="warning_password_length">password should be at least 6 characters</string>
    <string name="warning_st_no_child_length">Student No Of Child must be 10</string>
    <string name="warning_course_length">course should be at least 3 characters</string>
    <string name="warning_post_length">post should be at least 3 characters</string>
    <string name="warning_degree_length">degree of education should be at least 3 characters</string>
    <string name="warning_tel_work_length">office phone should be at least 3 characters</string>
    <string name="warning_address_work_length">address office should be at least 5 characters</string>
    <string name="warning_user_phone_no">phone number existed</string>
    <string name="warning_user_exist">username existed</string>
</resources>
