<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="50dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="50dp"
    app:cardBackgroundColor="@color/primary"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/profile_frame_cover"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/profile_imgv_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:visibility="visible"
                android:src="@drawable/background" />

            <RelativeLayout
                android:id="@+id/profile_rl_reveal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/accent"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/profile_lil_btns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/profile_btn_send"
                        style="@style/ProfileActivityButtons"
                        android:text="@string/new_conv" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/profile_btn_search"
                        style="@style/ProfileActivityButtons"
                        android:text="@string/search" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/profile_btn_chatlist"
                        style="@style/ProfileActivityButtons"
                        android:text="@string/inbox" />

                </LinearLayout>

            </RelativeLayout>

        </FrameLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/profile_imgv_menu"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignBottom="@id/profile_frame_cover"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="-28dp"
            android:background="@drawable/circle_cloud"
            android:padding="10dp"
            app:srcCompat="@drawable/list"
            app:tint="@color/accent" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/profile_imgv_avatar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignBottom="@id/profile_frame_cover"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="-28dp"
            android:background="@drawable/circle_cloud"
            android:padding="10dp"
            app:srcCompat="@drawable/user"
            app:tint="@color/accent" />

        <Space
            android:id="@+id/profile_sp"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_below="@id/profile_frame_cover" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/profile_tv_firstname"
            style="@style/ProfileActivityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_imgv_avatar"
            android:layout_marginTop="30dp"
            android:text="@string/first_name"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/profile_tv_lastname"
            style="@style/ProfileActivityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_tv_firstname"
            android:text="@string/last_name"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/profile_tv_gender"
            style="@style/ProfileActivityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_tv_lastname"
            android:text="@string/gender" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/profile_tv_username"
            style="@style/ProfileActivityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_tv_gender"
            android:text="@string/username" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/profile_tv_phone_no"
            style="@style/ProfileActivityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_tv_username"
            android:text="@string/phone_number" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/profile_tv_name_of_child"
            style="@style/ProfileActivityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_tv_phone_no"
            android:text="@string/name_Of_child" />

    </RelativeLayout>


</android.support.v7.widget.CardView>