<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/spinner_tv_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/first_name"
        android:textColor="@color/primary_light"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/spinner_tv_lastname"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextViewBasic"
        android:layout_marginHorizontal="5dp"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/spinner_tv_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:gravity="center_horizontal"
        android:textColor="@color/primary_light"
        app:layout_constraintTop_toTopOf="@id/spinner_tv_firstname"
        app:layout_constraintRight_toLeftOf="@id/spinner_tv_firstname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textSize="18sp"
        style="@style/TextViewBasic"


        app:layout_constraintHorizontal_bias="0.50"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/spinner_tv_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/spinner_tv_firstname"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="3dp"
        style="@style/MangerVerifyUserTextView"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_tv_post"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:background="@color/accent_light" />

</android.support.constraint.ConstraintLayout>